--- a/eTicketsEase/Views/Producers/Index.cshtml
+++ b/eTicketsEase/Views/Producers/Index.cshtml
@@ -1,26 +1,32 @@
-﻿@model IEnumerable<Actor>
-@{
-    ViewData["Title"] = "List of Actors";
+﻿@model IEnumerable<Producer>
+@{ 
+    ViewData["Title"] = "List Of Producers";
 }
+
 <div class="row">
     <div class="col-md-8 offset-md-2">
         <table class="table">
             <thead>
                 <tr class="text-center">
-                    <th>@Html.DisplayNameFor(model =>model.ProfilePicturUrl)</th>
+                    <th>@Html.DisplayNameFor(model=>model.ProfilePicturUrl)</th>
                     <th>@Html.DisplayNameFor(model => model.FullName)</th>
                     <th>@Html.DisplayNameFor(model => model.Bio)</th>
-                    <th>Actions</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody>
-
-                @foreach (var item in Model)
+                @foreach(var item in Model)
                 {
-                <tr>
-                    <td class="align-middle"><img class="rounded-circle" src="@item.ProfilePicturUrl" alt="@item.FullName" style="max-width: 150px" /></td>
-                    <td class="align-middle">@Html.DisplayFor(modelitem =>item.FullName)</td>
-                    <td class="align-middle">@Html.DisplayFor(modelitem => item.Bio)</td>
+                <tr >
+                    <td class="align-middle">
+                        <img class="rounded-circle" src="@item.ProfilePicturUrl" alt="@item.FullName" style="max-width:150px"/>
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.FullName)
+                    </td>
+                    <td class="align-middle">
+                        @Html.DisplayFor(modelItem => item.Bio)
+                    </td>
                     <td class="align-middle">
                         <a class="btn btn-outline-primary" style="cursor:pointer"><i class="bi bi-pencil-square"></i>Edit </a> |
                         <a class="btn btn-outline-info " style="cursor:pointer"><i class="bi bi-eye"></i>Details </a> |
