--- a/eTicketsEase/Views/Shared/_Layout.cshtml
+++ b/eTicketsEase/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             @*&copy; 2023 - eTicketsEase - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
-            &copy; 2023 - eTicketsEase 
+            &copy; 2023 - eTicketsEase </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
